RESOLVED FIXED148464
[Cocoa] PerformanceTest Layout/RegionsShapes.html is failing
https://bugs.webkit.org/show_bug.cgi?id=148464
Summary [Cocoa] PerformanceTest Layout/RegionsShapes.html is failing
Myles C. Maxfield
Reported 2015-08-25 22:05:35 PDT
[Cocoa] PerformanceTest Layout/RegionsShapes.html is failing
Attachments
Patch (3.23 KB, patch)
2015-08-25 22:08 PDT, Myles C. Maxfield
aestes: review+
Myles C. Maxfield
Comment 1 2015-08-25 22:08:38 PDT
Andy Estes
Comment 2 2015-08-25 22:42:23 PDT
Comment on attachment 259924 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=259924&action=review > Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:472 > + RetainPtr<CFDictionaryRef> attributes = adoptCF(CFDictionaryCreate(kCFAllocatorDefault, keys, values, WTF_ARRAY_LENGTH(keys), &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks)); > + RetainPtr<CTFontDescriptorRef> descriptor = adoptCF(CTFontDescriptorCreateWithAttributes(attributes.get())); I like to use auto in these cases.
Myles C. Maxfield
Comment 3 2015-08-26 17:20:33 PDT
Note You need to log in before you can comment on or make changes to this bug.