[Cocoa] PerformanceTest Layout/RegionsShapes.html is failing https://bugs.webkit.org/show_bug.cgi?id=148464

Reviewed by Andy Estes.

The test is failing because Core Text emits a warning message when you use CTFontCreateWithName()
and it cannot find the name you provide. However, this is exactly the situation we are creating
(by attempting to auto-activate a font if we could not otherwise find it). The fix is to simply
not use that API function in favor of using CTFontCreateWithFontDescriptor(), which does not emit
a warning message..

No new tests because there is no behavior change.

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::autoActivateFont):
(WebCore::FontCache::createFontPlatformData):

Canonical link: https://commits.webkit.org/166603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189005 268f45cc-cd09-0410-ab3c-d52691b4dbfc